--- a/public/tiposCachos.html
+++ b/public/tiposCachos.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/conteudo.css">
-    <link rel="shortcut icon" href="../img/Logo_Let_Curly-removebg-preview.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/conteudo.css">
+    <link rel="shortcut icon" href="./img/Logo_Let_Curly-removebg-preview.png" type="image/x-icon">
     <title>Let Curly</title>
+    <script src="./js/sessao.js"></script>
 </head>
 
 <body>
 
     <div class="header">
         <div class="container">
-            <a href="index.html"> <img class="img-logo" src="../img/Logo_Let_Curly-removebg-preview.png"></a>
+            <a href="index.html"> <img class="img-logo" src="./img/Logo_Let_Curly-removebg-preview.png"></a>
 
             <ul class="navbar">
                 <a href="index.html">
@@ -62,7 +64,7 @@
             então é comum uma pessoa ter mais de um tipo de cabelo, por isso identificar as diferenças dos seus fios vai
             te ajudar a oferecer os melhores cuidados para eles.
             <div class="container-img">
-                <img class="img-curvaturas" src="../img/saiba-qual-e-o-seu-tipo-de-cacho.webp" alt="">
+                <img class="img-curvaturas" src="./img/saiba-qual-e-o-seu-tipo-de-cacho.webp" alt="">
             </div><br>
 
             <h3>Cabelos cacheados</h3><br>
