--- a/public/transicaoCapilar.html
+++ b/public/transicaoCapilar.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/conteudo.css">
-    <link rel="shortcut icon" href="../img/Logo_Let_Curly-removebg-preview.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/conteudo.css">
+    <link rel="shortcut icon" href="./img/Logo_Let_Curly-removebg-preview.png" type="image/x-icon">
     <title>Let Curly</title>
+    <script src="./js/sessao.js"></script>
 </head>
 
 <body>
 
     <div class="header">
         <div class="container">
-            <a href="index.html"> <img class="img-logo" src="../img/Logo_Let_Curly-removebg-preview.png"></a>
+            <a href="index.html"> <img class="img-logo" src="./img/Logo_Let_Curly-removebg-preview.png"></a>
 
             <ul class="navbar">
                 <a href="index.html">
