alteraçoes api e bd

--- a/public/login.html
+++ b/public/login.html
@@ -96,6 +96,8 @@
 
             } else {
 
+               /*  adicionar card-erro que precisa de cadastrar, não existe aquele usuario no banco de dado */
+
                 console.log("Houve um erro ao tentar realizar o login!");
 
                 resposta.text().then(texto => {
