ajustes bd e quiz

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -32,18 +32,18 @@
   <body>
 
     <div class="container-quiz">
-      <div class="questions-container hide">
-        <span class="question">Pergunta aqui?</span>
-        <div class="answers-container">
-          <button class="answer button">Resposta 1</button>
-          <button class="answer button">Resposta 2</button>
-          <button class="answer button">Resposta 3</button>
-          <button class="answer button">Resposta 4</button>
+      <div class="questao-container hide">
+        <span class="questao">Pergunta aqui?</span>
+        <div class="respostas-container">
+          <button class="respostas button">Resposta 1</button>
+          <button class="respostas button">Resposta 2</button>
+          <button class="respostas button">Resposta 3</button>
+          <button class="respostas button">Resposta 4</button>
         </div>
       </div>
       <div class="controls-container">
-        <button class="start-quiz button">Começar Quiz!</button>
-        <button class="next-question button hide">Próxima pergunta</button>
+        <button class="comecar-quiz button">Começar Quiz!</button>
+        <button class= "proxima-questao button hide">Próxima pergunta</button>
       </div>
     </div>
   </body>
