--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -184,11 +184,7 @@
       document.getElementById("card-erro").style.display = 'block';
       document.getElementById("mensagem-erro").innerHTML = camposVazios;
     } else if (nomeValido && emailValido && senhaValida && confirmSenhaValida) {
-     /*  document.getElementById("card-erro").style.display = 'none';
-      document.getElementById("cadastroSucesso").style.display = "flex";
-      document.getElementById("cadastroSucesso").style.animation =
-        "cadastroComSucesso";
-      document.getElementById("cadastroSucesso").style.animationDuration = "5s"; */
+      document.getElementById("card-erro").style.display = 'none';
 
       setTimeout(
         () =>
