ajuste botao quiz

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -42,7 +42,7 @@
       </div>
       <div class="controls-container">
         <button class="comecar-quiz button">Começar Quiz!</button>
-        <button class= "proxima-questao button hide">Próxima pergunta</button>
+        <button id="botao" class= "proxima-questao button hide">Próxima pergunta</button>
       </div>
     </div>
   </body>
