--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
             <h1>Faça seu Login</h1>
             <div class="container-inputs">
                 <p>Email</p><input type="text"  id="input_email" class="input"><br><br>
-                <p>Senha</p><input type="text"  id="input_senha" class="input"><br><br>
+                <p>Senha</p><input type="password"  id="input_senha" class="input"><br><br>
             </div>
             <span id="mensagemErro" class="mensagemErro">Email ou senha inválida!</span>
             <button class="button-login"   onclick="entrar()">Login</button>
@@ -51,8 +51,6 @@
     </div>
 </body>
 </html>
-
-
 <script>
 
 
