--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -48,8 +48,8 @@
       <div class="container-inputs">
         <p>Nome</p><input type="text" id="input_nome" class="input"><br><br>
         <p>Email</p><input type="text" id="input_email" class="input"><br><br>
-        <p>Senha</p><input type="text" id="input_senha" class="input"><br><br>
-        <p>Confirmação de Senha</p><input type="text" id="input_confirma_senha" class="input">
+        <p>Senha</p><input type="password" id="input_senha" class="input"><br><br>
+        <p>Confirmação de Senha</p><input type="password" id="input_confirma_senha" class="input">
       </div>
       <button class="button-cadastro" onclick="cadastrar()">Cadastrar</button>
       <div class="container-tem-conta">
